--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,13 @@ dependencies {
     //스피너
     implementation 'com.github.ganfra:material-spinner:1.1.0'
 
+    //슬라이딩
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
+    //날씨
+    implementation 'com.github.androdocs:Simple-HTTP-Request:v1.0'
+    //날씨 아이콘 가져오기 위한 라이브러리(구글개발)
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
