--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 12 09:55:52 KST 2019
-sdk.dir=C\:\\Users\\User\\AppData\\Local\\Android\\Sdk
+#Fri Dec 13 13:42:09 KST 2019
+sdk.dir=/Users/nambbo/Library/Android/sdk
