calendar를 이용한 다이어리 기능 화면 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
             android:permission="android.permission.BIND_REMOTEVIEWS"></service>
 
         <activity android:name=".ui.AddEditAlarmActivity" />
+        <activity android:name=".calendar.CalendarActivity" />
 
         <activity
             android:name=".ui.AlarmLandingPageActivity"
