--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".ui.MainActivity"
             />
 
-        <receiver android:name=".ui.WidgetListviewProvider">
+        <receiver android:name=".ui.HomeWidgetListviewProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -40,7 +40,7 @@
         </receiver>
 
         <service
-            android:name=".ui.MyService"
+            android:name=".ui.HomeWidgetService"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BIND_REMOTEVIEWS"></service>
